--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "check-types": "turbo run check-types"
   },
   "devDependencies": {
-    "prettier": "^3.5.3",
     "turbo": "^2.5.0",
-    "typescript": "5.8.2"
+    "typescript": "5.8.2",
+    "@biomejs/biome": "~1.9.4"
   },
   "packageManager": "pnpm@9.0.0",
   "engines": {
