--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
     "build": "turbo run build",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "check-types": "turbo run check-types"
   },
   "devDependencies": {
+    "@biomejs/biome": "~1.9.4",
+    "@changesets/cli": "~2.28.1",
     "turbo": "^2.5.0",
-    "typescript": "5.8.2",
-    "@biomejs/biome": "~1.9.4"
+    "typescript": "5.8.2"
   },
   "packageManager": "pnpm@9.0.0",
   "engines": {
