--- a/packages/hermes/package.json
+++ b/packages/hermes/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@asgard/hermes",
   "version": "0.0.1",
-  "private": true,
   "main": "./src/index.ts",
   "types": "./src/index.ts",
   "module": "./src/index.ts",
@@ -9,7 +8,8 @@
     "packageManager": "pnpm"
   },
   "publishConfig": {
-    "registry": "https://npm.jsr.io"
+    "registry": "https://npm.jsr.io",
+    "access": "restricted"
   },
   "bin": {
     "hermes": "./bin/hermes.ts"
