--- a/packages/heimdall/package.json
+++ b/packages/heimdall/package.json
@@ -28,6 +28,7 @@
     "stoker": "~1.4.2"
   },
   "devDependencies": {
-    "vitest": "~3.1.1"
+    "vitest": "~3.1.1",
+    "zod": "~3.24.2"
   }
 }
