:sparkles: feat: add heimdall for multi cloud runtime environment

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,5 +13,5 @@
 	"[graphql]": {
 		"editor.defaultFormatter": "biomejs.biome"
 	},
-	"cSpell.words": ["Hermis", "hermod"]
+	"cSpell.words": ["AWSAPI", "Hermis", "hermod"]
 }
