--- a/packages/heimdall/package.json
+++ b/packages/heimdall/package.json
@@ -26,7 +26,12 @@
     "stoker": "~1.4.2"
   },
   "devDependencies": {
+    "@types/aws-lambda": "8.10.147",
     "vitest": "~3.1.1",
-    "zod": "~3.24.2"
+    "zod": "~3.24.2",
+    "@middy/core": "~6.1.6"
+  },
+  "peerDependencies": {
+    "@middy/core": "~6.1.6"
   }
 }
