--- a/packages/hermod/deno.json
+++ b/packages/hermod/deno.json
@@ -2,7 +2,6 @@
 	"name": "@asgard/hermod",
 	"version": "0.0.1",
 	"exports": {
-		".": "./src/index.ts",
-		"./aws": "./src/aws.ts"
+		".": "./src/index.ts"
 	}
 }
