--- a/packages/heimdall/deno.json
+++ b/packages/heimdall/deno.json
@@ -1,16 +1,20 @@
 {
-	"name": "@asgard/heimdall",
-	"version": "0.0.1",
-	"license": "MIT",
-	"exports": {
-		".": "./src/index.ts",
-		"./aws": "./src/aws.ts"
-	},
-	"imports": {
-		"aws-lambda": "npm:@types/aws-lambda@8.10.147",
-		"@middy/core": "npm:@middy/core@6.1.6",
-		"@standard-schema/spec": "npm:@standard-schema/spec@^1.0.0",
-		"stoker": "npm:stoker@^1.4.2",
-		"zod": "npm:zod@^3.24.2"
-	}
+  "name": "@asgard/heimdall",
+  "version": "0.0.1",
+  "license": "MIT",
+  "exports": {
+    ".": "./src/index.ts",
+    "./aws": "./src/aws.ts",
+    "./config": "./src/config.ts",
+    "./server": "./src/server.ts"
+  },
+  "imports": {
+    "aws-lambda": "npm:@types/aws-lambda@8.10.147",
+    "@middy/core": "npm:@middy/core@6.1.6",
+    "@standard-schema/spec": "npm:@standard-schema/spec@^1.0.0",
+    "stoker": "npm:stoker@^1.4.2",
+    "zod": "npm:zod@^3.24.2",
+    "fast-glob": "npm:fast-glob@^3.3.3",
+    "@scalar/hono-api-reference": "npm:@scalar/hono-api-reference"
+  }
 }
