:wrench: chore: use explicit versions for hono

--- a/packages/heimdall/deno.json
+++ b/packages/heimdall/deno.json
@@ -15,6 +15,8 @@
     "stoker": "npm:stoker@^1.4.2",
     "zod": "npm:zod@^3.24.2",
     "fast-glob": "npm:fast-glob@^3.3.3",
-    "@scalar/hono-api-reference": "npm:@scalar/hono-api-reference"
+    "@scalar/hono-api-reference": "npm:@scalar/hono-api-reference@~0.8.1",
+    "hono-openapi": "npm:hono-openapi@~0.4.6",
+    "hono": "npm:hono@~4.7.6"
   }
 }
