:wrench: chore: add jord environment manager

--- a/deno.json
+++ b/deno.json
@@ -2,10 +2,14 @@
   "workspace": [
     "./packages/heimdall",
     "./packages/hermod",
+    "./packages/jord",
     "./examples/heimdall"
   ],
   "imports": {
     "@std/assert": "jsr:@std/assert",
+    "@types/lodash.get": "npm:@types/lodash.get@^4.4.9",
+    "@zod/mini": "npm:@zod/mini@^4.0.0-beta.20250414T061543",
+    "lodash.get": "npm:lodash.get@^4.4.2",
     "zod": "npm:zod@^3.24.2",
     "hono": "npm:hono",
     "hono-openapi": "npm:hono-openapi",
