:tada: chore(tyr): add base setup for tyr encryption

--- a/deno.json
+++ b/deno.json
@@ -3,6 +3,7 @@
     "./packages/heimdall",
     "./packages/hermod",
     "./packages/jord",
+    "./packages/tyr",
     "./examples/heimdall"
   ],
   "imports": {
