:sparkles: feat(heimdall): add new endpoint function

--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -12,6 +12,9 @@
       }
     }
   },
+  "features": {
+    "edit_prediction_provider": "zed"
+  },
   "languages": {
     "TypeScript": {
       "language_servers": [
