--- a/deno.json
+++ b/deno.json
@@ -21,6 +21,7 @@
     "lodash.set": "npm:lodash.set@^4.3.2",
     "tweetnacl": "npm:tweetnacl@^1.0.3",
     "zod": "npm:zod@^3.24.2",
-    "zod-openapi": "npm:zod-openapi"
+    "zod-openapi": "npm:zod-openapi",
+    "std/http/": "https://deno.land/std@0.224.0/http/"
   }
 }
