--- a/packages/tyr/deno.json
+++ b/packages/tyr/deno.json
@@ -3,8 +3,6 @@
   "version": "0.0.1",
   "license": "MIT",
   "exports": {
-    ".": "./src/index.ts",
-    "./native": "./src/native.ts",
-    "./browser": "./src/browser.ts"
+    ".": "./src/index.ts"
   }
 }
